@@ -1,3 +1,9 @@
+2014-12-15  Josh Stone  <jistone@redhat.com>
+
+	* memory-access.h (__libdw_max_len_leb128): New.
+	(__libdw_get_uleb128): Use __libdw_max_len_leb128.
+	(__libdw_get_sleb128): Likewise.
+
 2014-12-14  Mark Wielaard  <mjw@redhat.com>
 
 	* cfi.c (execute_cfi): Add program bounds checks.
